# playlists_sptfy

./: .gitignore  .pre-commit-config.yaml  =0.5  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
data/settings/: README.md  default_config.json  settings.json
data/songs_import/: top_10_all_gens.txt
src/playlists_sptfy/: __init__.py  __main__.py  config.py  exporters.py  grouping.py  main.py  tags.py
tests/: tests.py
